charts/nvidia-network-operator/tests/healthcheck/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-nvidia-network-operator-deployments
  labels:
    healthcheck: "true"
    workload: "true"
spec:
  namespace: default
  timeouts:
    error: 5s
    assert: 5s
  scenarios:
    - bindings:
        - name: deployment
          value: nvidia-network-operator-controller-manager
  steps:
    - use:
        template: ../../../../tests/templates/deployment-available.yaml
        with:
          bindings:
            - name: deployment
              value: ($deployment)
            - name: targetNamespace
              value: nvidia-network-operator
